monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4024/A4024_f.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4024;

grammar A4024_f {

  A;

  Super = [c:"state"];

  Sub extends Super = c:A;
}
